<resources>
    <string name="app_name">RubyLan</string>
    <string name="title_bookmarks">Bookmark</string>
    <string name="title_map">Map</string>
    <string name="title_settings">Settings</string>
    <string name="mapbox_access_token">sk.eyJ1IjoieWFzaHl6YiIsImEiOiJja280YXRzODMxMDY0MnZzNXZzZnFqMWV3In0.aPRbDJQE28RQOBtp1cYlwQ</string>
    <string name="mapbox_download_token">pk.eyJ1IjoicmV6YTAwNzgiLCJhIjoiY2tvNDl4ZDd3MWhlNzJwcGdhOHVsMzhlMSJ9.Qg1WXz_tjj3umpqDGjV79g</string>
    <string name="location_api_base_url">https://api.mapbox.com/geocoding/v5/mapbox.places/</string>
    <string name="dialog_save_bookmark">U savin\' bruh?</string>
    <string name="dialog_yes">Yeap!</string>
    <string name="dialog_no">Nea!</string>
    <string name="save_location_alert">Save location</string>
    <string name="yes">Yeap!</string>
    <string name="no">NEAH!</string>
    <string name="bookmark_deletion_alert">Are you sure you want to delete this bookmark?</string>
    <string name="settings_text">Settings</string>
    <string name="empty_bookmark_text">You haven\'t bookmarked any place!</string>
    <string name="not_comma">,</string>
    <string name="not_lat">Lat</string>
    <string name="not_long">Long</string>
    <string name="search_bookmarks_hint">Search bookmarks</string>
    <string name="bookmark_name_hint">Bookmark name</string>
    <string name="light_style_uri">mapbox://styles/mapbox/navigation-day-v1</string>
    <string name="dark_style_uri">mapbox://styles/mapbox/navigation-night-v1</string>
    <string name="dialog_message">Are you sure you want to delete saved data?</string>
    <string name="dialog_title">Delete Alert</string>
    <string name="delete_data_button_text">Delete Data</string>
    <string name="dark_mode_switch">Dark Mode</string>
    <string name="user_device_location_permission_explanation">App does not have permission to access device location.</string>
    <string name="no_search_result">No result found!</string>
    <string name="error_searching_location">An error occured while searching the location</string>
</resources>