<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_bookmark"
        android:icon="@drawable/ic_baseline_bookmark_24"
        android:title="@string/title_bookmarks" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search_hint"
        app:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />

</menu>