<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_bookmark">

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="edu.sharif.mobdev_hw2_spring_2021.ui.bookmark.BookmarkFragment"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/fragment_bookmark" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="edu.sharif.mobdev_hw2_spring_2021.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="edu.sharif.mobdev_hw2_spring_2021.ui.settings.SettingFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_setting" />
</navigation>